# wisprovident

./: README.md  index.html  package.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/pages/: Comprehensions.tsx  Home.tsx  Lessons.tsx  Settings.tsx  Shop.tsx
