[package]
name = "wisprovident"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-unmaximize", "window-show", "window-maximize", "window-unminimize", "window-minimize", "window-close", "window-hide", "window-start-dragging", "fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
